Add HD screen classes (MainMenu, TopBar, TaskBar)
Phase 4 - Screen Migration:
- Add hd_screens.h/cpp with HDScreen base class
- Add HD_MainMenu with login layout and callbacks
- Add HD_TopBar with date/time/speed/account/location updates
- Add HD_TaskBar with email notification
- Add HDUIManager for mode switching
- Fix missiongenerator buffer overflow (completionD[8] -> [32])

--- a/uplink/src/Makefile.linux
+++ b/uplink/src/Makefile.linux
@@ -90,6 +90,7 @@ app/uplinkobject.cpp \
 hd_ui/hd_allegro5.cpp \
 hd_ui/hd_ui_object.cpp \
 hd_ui/hd_layout_parser.cpp \
+hd_ui/hd_screens.cpp \
 game/data/data.cpp \
 game/game.cpp \
 game/gameobituary.cpp \
